2008-02-14  Alexander Larsson  <alexl@redhat.com>

	* daemon/Makefile.am:
	Disable install of ftp.mount for now

2008-02-14  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfschannel.c:
        Fix case where current_job has died (NULL) but
	the current_job_seq_nr was left and matched
	a sent cancel op. (#515959)

2008-02-13  Alexander Larsson  <alexl@redhat.com>

	* daemon/gvfsbackendsmb.c (do_read):
	Limit smb reads to 65535 bytes to avoid issues on
	large reads.

2008-02-13  Ryan Lortie  <desrt@desrt.ca>

	* daemon/gvfsbackendtrash.c:
	Keep track of the number of top level items in the trash.
	Expose this value via the trash::item-count attribute.

2008-02-13  Alexander Larsson  <alexl@redhat.com>

        * hal/ghalmount.c:
	Don't show nfs mounts (#516036)

2008-02-12  Alexander Larsson  <alexl@redhat.com>

	* hal/ghalvolumemonitor.c (g_hal_volume_monitor_finalize):
	Don't double free list optical disc list.

2008-02-11  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump

=== gvfs 0.1.7 ===

2008-02-11  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

2008-02-11  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendtrash.c:
	Set the correct copy name.
	Set description.

2008-02-11  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsmb.c:
        (do_set_display_name):
	Fix typo: get_dirname, not get_basename.
	Fixes renames on smb (#514126)

2008-02-11  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsftp.c:
	Set new path in set_display name.
	
        * daemon/gvfsjobsetdisplayname.c:
	Assert that new_path is set

2008-02-11  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
        * client/gdaemonfileinputstream.c:
        * client/gdaemonfileoutputstream.c:
        * common/gsysutils.c:
        * common/gvfsdaemonprotocol.c:
        * daemon/gvfsbackendburn.c:
        * daemon/gvfsbackendcdda.c: